# text-to-cad-discord-bot

./: Cargo.toml  Dockerfile  LICENSE
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  deployment.yml  docker-image.yml
kubernetes/corp/virginia/: deployment.yaml  ghcr-auth.yaml  ingress.yaml  kustomization.yaml  labelTransformer.yaml  secrets.yaml  service.yaml
openapi/: api.json  tag-config.json
src/: enclose.rs  engine.rs  image.rs  main.rs  tests.rs
src/commands/: design.rs  mod.rs  ping.rs
src/server/: context.rs  endpoints.rs  mod.rs
