[package]
name = "text-to-cad-discord-bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
bson = { version = "2.7.0", features = ["uuid-1", "chrono"] }
clap = { version = "4.5.0", features = ["cargo", "derive", "env", "unicode"] }
dashmap = "5.5.3"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
futures = "0.3"
git_rev = "0.1.0"
kittycad = "0.2.53"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
parse-display = "0.8.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
sentry = { version = "0.32", default-features = false, features = ["anyhow", "backtrace", "panic", "contexts", "debug-images", "tracing", "log", "slog", "rustls", "reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
serenity = {version = "0.12.0", features = ["collector", "framework", "standard_framework"]}
signal-hook = "0.3.17"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dev-dependencies]
async-trait = "0.1.74"
expectorate = "1"
# futures is necessary for test-context
futures = "0.3"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
openapiv3 = "2.0.0-rc.1"
portpicker = "^0.1.1"
pretty_assertions = "1"
test-context = "^0.1.3"
