[package]
name = "text-to-cad-discord-bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = [] }
bson = { version = "2.11.0", features = ["uuid-1", "chrono"] }
clap = { version = "4.5.14", features = ["cargo", "derive", "env", "unicode"] }
dashmap = "6.0.1"
dropshot = { version = "0.10" }
futures = "0.3"
git_rev = "0.1.0"
kittycad = "0.3.10"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde"] }
parse-display = "0.10.0"
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
signal-hook = "0.3.17"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
async-trait = "0.1.81"
expectorate = "1"
# futures is necessary for test-context
futures = "0.3"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
openapiv3 = "2.0.0-rc.1"
portpicker = "^0.1.1"
pretty_assertions = "1"
test-context = "^0.1.3"
